--- a/Requirements.txt
+++ b/Requirements.txt
@@ -7,6 +7,7 @@ addict #ESRGAN
 tb-nightly #ESRGAN
 yapf #ESRGAN
 pydub #VITS
+PyYAML==5.1 #FOMM
 
 
 ########################################Already Installed in colab
